ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.api.med4all.care
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: med4all-be-service
                port:
                  number: 80
                  
    - host: dev.med4all.care
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: med4all-site-service
                port:
                  number: 80
